syntax = "proto3";

package ON.Authorization.FakePayments;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service PaymentsInterface {
  rpc GetOwnSubscriptionRecord (GetOwnSubscriptionRecordRequest) returns (GetOwnSubscriptionRecordResponse)
  {
    option (google.api.http) = {
      get: "/api/fakepay/record"
    };
  }
  rpc ChangeOwnSubscriptionRecord (ChangeOwnSubscriptionRecordRequest) returns (ChangeOwnSubscriptionRecordResponse)
  {
    option (google.api.http) = {
      post: "/api/fakepay/record"
      body: "*"
    };
  }
}
  
// User claim's record
message SubscriptionRecord {
  bytes UserID = 1; // Guid for the user
  uint32 Level = 2;
  google.protobuf.Timestamp ChangedOnUTC = 3;
}

message GetOwnSubscriptionRecordRequest {
}
  
message GetOwnSubscriptionRecordResponse {
  SubscriptionRecord Record = 1;
}
  
message ChangeOwnSubscriptionRecordRequest {
  uint32 Level = 1;
}
  
message ChangeOwnSubscriptionRecordResponse {
  SubscriptionRecord Record = 1;
  string Error = 2;
}
